--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
