--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
+    z-index: 100;
 }
 
 #header-btns {
