--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -4,13 +4,34 @@
     justify-content: space-between;
     position: relative;
     z-index: 100;
+    margin-bottom: 20px;
+    background: rgb(199, 218, 218);
+    background: linear-gradient(90deg, rgba(199, 218, 218, 1) 0%, rgba(191, 249, 247, 1) 30%, rgba(0, 237, 255, 1) 80%);
+    /* background-color: yellow; */
+    /* background-color: #231942; */
+    /* color: #fff; */
+}
+
+.app-name {
+    font-weight: 700;
+    /* background-color: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
 }
 
 #header-btns {
     width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
 }
 
-#header-btns ul {
+#header-btns button {
+    padding: 10px 15px;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+/* #header-btns ul {
     display: flex;
     align-items: center;
     justify-content: end;
@@ -20,9 +41,10 @@
 #header-btns ul li {
     padding: 10px 20px;
     cursor: pointer;
-}
+} */
 
-#header-btns ul li:hover {
+#header-btns button:hover {
+    color: #fff;
     transition: all 500ms;
     background-color: rgba(0, 0, 0, 0.3);
 }
