--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 10px;
     position: relative;
     z-index: 100;
     margin-bottom: 20px;
