--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -5,7 +5,7 @@
     padding: 10px;
     position: relative;
     z-index: 100;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     background: rgb(199, 218, 218);
     background: linear-gradient(90deg, rgba(199, 218, 218, 1) 0%, rgba(191, 249, 247, 1) 30%, rgba(0, 237, 255, 1) 80%);
     /* background-color: yellow; */
