--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -6,11 +6,15 @@
     position: relative;
     z-index: 100;
     /* margin-bottom: 20px; */
-    background: rgb(199, 218, 218);
-    background: linear-gradient(90deg, rgba(199, 218, 218, 1) 0%, rgba(191, 249, 247, 1) 30%, rgba(0, 237, 255, 1) 80%);
     /* background-color: yellow; */
     /* background-color: #231942; */
     /* color: #fff; */
+
+    background-color: #dbd8d8;
+    /* box-shadow: 20px 2px rgba(0, 0, 0, 0.1); */
+
+    /* background: rgb(199, 218, 218);
+    background: linear-gradient(90deg, rgba(199, 218, 218, 1) 0%, rgba(191, 249, 247, 1) 30%, rgba(0, 237, 255, 1) 80%); */
 }
 
 .app-name {
