--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -5,13 +5,8 @@
     padding: 10px;
     position: relative;
     z-index: 100;
-    /* margin-bottom: 20px; */
-    /* background-color: yellow; */
-    /* background-color: #231942; */
-    /* color: #fff; */
 
-    background-color: #dbd8d8;
-    /* box-shadow: 20px 2px rgba(0, 0, 0, 0.1); */
+    background-color: #dfdcdc;
 
     /* background: rgb(199, 218, 218);
     background: linear-gradient(90deg, rgba(199, 218, 218, 1) 0%, rgba(191, 249, 247, 1) 30%, rgba(0, 237, 255, 1) 80%); */
@@ -19,6 +14,7 @@
 
 .app-name {
     font-weight: 700;
+    cursor: pointer;
     /* background-color: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12); */
 }
 
